[gd_scene load_steps=6 format=2]

[ext_resource path="res://Actors/Actor.gd" type="Script" id=1]
[ext_resource path="res://TestAssets/Normal.png" type="Texture" id=2]
[ext_resource path="res://TestAssets/TestBodies/NormalBody.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "MoveIn"
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite/FacePoint/FaceSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite/FacePoint/FaceSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite/FacePoint/FaceSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Actor" type="Node2D"]
script = ExtResource( 1 )

[node name="BodySprite" type="Sprite" parent="."]
position = Vector2( 0, -128 )
texture = ExtResource( 3 )

[node name="FacePoint" type="Node2D" parent="BodySprite"]
position = Vector2( 0, -88 )

[node name="FaceSprite" type="Sprite" parent="BodySprite/FacePoint"]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MoveIn = SubResource( 1 )
anims/RESET = SubResource( 2 )
